--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "build": "next build",
     "dev": "next dev -p 3080",
     "start": "next start",
-    "postinstall": "fumadocs-mdx",
-    "ver": "changeset version",
-    "release": "changeset version"
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -16,19 +14,23 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@tabler/icons": "^3.21.0",
-    "@tabler/icons-react": "^3.21.0",
+    "@tabler/icons": "^3.22.0",
+    "@tabler/icons-react": "^3.22.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.11",
-    "jotai": "^2.10.1",
-    "lucide-react": "^0.454.0",
-    "next": "^15.0.2",
+    "framer-motion": "^11.11.17",
+    "fumadocs-core": "14.4.0",
+    "fumadocs-docgen": "^1.3.2",
+    "fumadocs-mdx": "^11.1.1",
+    "fumadocs-ui": "14.4.0",
+    "jotai": "^2.10.2",
+    "lucide-react": "^0.460.0",
+    "next": "^15.0.3",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,13 +39,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "eslint": "^9",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
